--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "csv-writer": "^1.6.0",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
+    "moment-timezone": "^0.5.45",
     "pg": "^8.12.0"
   },
   "devDependencies": {
